@@ -2,7 +2,11 @@
 	- refactor the hxl.validation module for better testing and
 	  maintainability
 	- add a new default schema with useful default tests
-	- allow multiple tag patterns (comma-separated) for #valid_tag in a HXL schema
+	- allow multiple tag patterns (comma-separated) for #valid_tag in
+	  a HXL schema
+	- add a spelling validation test
+	- add a numeric-outlier validation test
+	- refactor CacheFilter to preserve row numbers
 
 2018-04-30 Release 4.7
 	- remove obsolete Python2 compatibility code
